# robots_articulo

repo_robots/camara/Interfaz/nbproject/: project.properties
repo_robots/camara/Interfaz/src/interfaz/: Interfaz.java  Main.form  Main.java  RobotInterface.java
repo_robots/camara/control/: control.ino
repo_robots/camara/vision/: CMakeLists.txt  README.txt  camera_agent.cpp  cameraparams.h  pattern.cpp  pattern.h  patterndetector.cpp
repo_robots/operador/carro_articulo/: carro_articulo.ino
repo_robots/organizador/imxsrc/: APDescription.txt  CameraAgent.java  Commands  MTPs-Main-Container.txt  RobotAgent.java  dummy_debug
repo_robots/organizador/imxsrc/behaviours/: CallForPosition.java  CameraPlanner.java  MoveRobotBehaviour.java
repo_robots/organizador/imxsrc/jaya/: Jaya.java  PlanObject.java
repo_robots/organizador/imxsrc/serial/: RobotInterface.java
repo_robots/organizador/imxsrc/utils/: CameraUtils.java  MathUtils.java  RobotController.java  RobotMap.java
repo_robots/organizador/nano/: AgentCinvestav.ino
